<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgDetail"
        android:layout_width="170dp"
        android:layout_height="250dp"
        android:layout_margin="16dp"
        android:src="@drawable/ic_broken_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/image"/>

        <TextView
            android:id="@+id/tvOriginalTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:maxLines="2"
            android:fontFamily="@font/roboto_black"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintStart_toEndOf="@+id/imgDetail"
            app:layout_constraintTop_toTopOf="@id/imgDetail"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="@string/original_title"/>

        <TextView
            android:id="@+id/tvTitleDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:maxLines="2"
            android:fontFamily="@font/roboto_black"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintStart_toEndOf="@id/imgDetail"
            app:layout_constraintTop_toBottomOf="@+id/tvOriginalTitle"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="@string/title"/>

        <TextView
            android:id="@+id/tvReleaseDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toEndOf="@id/imgDetail"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleDetail"
            tools:text="@string/release_date"/>

        <TextView
            android:id="@+id/tvoriginal_lenguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toEndOf="@id/imgDetail"
            app:layout_constraintTop_toBottomOf="@+id/tvReleaseDetail"
            tools:text="@string/original_language" />


    <RatingBar
        android:id="@+id/rantingBar"
        style="@android:style/Widget.Holo.Light.RatingBar.Indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:stepSize="0.1"
        android:progressBackgroundTint="@color/placeholder"
        android:progressTint="@color/yellow"
        android:layout_marginBottom="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/img_share"
        app:layout_constraintStart_toEndOf="@+id/imgDetail"/>

    <ImageView
        android:id="@+id/img_favDetail"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/ic_favorite_border"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/rantingBar"
        app:layout_constraintEnd_toStartOf="@+id/img_share"
        app:layout_constraintTop_toTopOf="@id/tv_desc"
        android:contentDescription="@string/image"/>

    <ImageView
        android:id="@+id/img_share"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/sharedetail"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/rantingBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_desc"
        android:contentDescription="@string/image"/>

    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:text="@string/description"
        android:textSize="18sp"
        android:textStyle="bold"
        android:fontFamily="@font/roboto_black"
        app:layout_constraintTop_toBottomOf="@id/imgDetail"/>

    <TextView
        android:id="@+id/tvDescDetail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/roboto_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_desc"
        tools:layout_editor_absoluteX="16dp"
        tools:text="@string/description" />

</androidx.constraintlayout.widget.ConstraintLayout>