...
    android:orientation="vertical"
    tools:context=".ui.setting.SettingActivity">

    <include android:id="@+id/toolbar_setting" layout="@layout/toolbar_setting"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lyt_bahasa"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginBottom="3dp"
        android:layout_below="@id/toolbar_setting"
        android:elevation="4dp">
...
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchThme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
...
